2004-06-09  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkUndo.c (TkUndoSetDepth): Delete the unlinked element and
	not the next element.  Stops a crash in some situations and a memory
	leak in others. Thanks to Jiang Wu for spotting this. [Bug 969358]

2004-06-08  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/tkCanvText.c (DisplayCanvText): Fix text
	rendering problem with canvas text items that
	have a selected region. The previous implementation
	would render the whole line and then redraw the
	selected text if it was a different color. This caused
	problems when the selected text foreground differs
	from the normal text foreground, the anti-aliasing
	alpha pixels for the two text strings would blend
	together resulting in strange looking text. The
	fix is to draw the normal text and the selected text
	separately. This problem has only been observed
	under Windows, with anti-aliased text. [Patch 968725]

2004-06-07  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tkTextDisp.c: 
	* generic/tkTextBTree.c: fix to (Bug 965186) in which the text
	widget's record of partial-line-height calculations (for very
	long wrapped lines) was being incorrectly reused.  This resulted
	in confusing scrollbar-text interactions.

2004-06-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/frame.test:     Fix frame-2.8 for ![info exists env(DISPLAY)]

2004-06-04  Don Porter  <dgp@users.sourceforge.net>

	* tests/filebox.test:	A few typo corrections in dkf's recent
	* tests/frame.test:	style upgrade for the test suite.
	* tests/select.test:
	* tests/visual.test:

2004-06-04  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tkTextIndex.c: 
	* generic/tkText.c: 
	* generic/tkTextDisp.c: 
	* doc/text.n: fix to shimmering infinite loop scrolling problem
	in text widget under some rare circumstances (Bug 965398).
	Improved comments and documentation.

	* tests/textDisp.test: corrected rounding from float to int